--- a/arch/arm64/configs/lancelot_defconfig
+++ b/arch/arm64/configs/lancelot_defconfig
@@ -79,6 +79,7 @@ CONFIG_CFG80211=y
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
 CONFIG_ZRAM=y
 CONFIG_ZRAM_SIZE_OVERRIDE=3
+CONFIG_ZRAM_DEDUP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_MEDIATEK_SOLUTION=y
 CONFIG_MTK_PLATFORM="mt6768"
